# TamagoCLI

./: .coverage  .gitignore  README.md  pyproject.toml  pytest.ini
.cursor/rules/project/: howto.mdc  layout.mdc
.github/workflows/: tests.yml
tamagocli/: __init__.py  main.py
tamagocli/display/: __init__.py  action_menu.py  curses_renderer.py  renderer.py  sprites.py
tamagocli/game/: __init__.py  engine.py  save_manager.py
tamagocli/models/: __init__.py  pet.py
tamagocli/utils/: __init__.py  curses_menu.py  menu.py
tests/: README.md  __init__.py  test_eating_timer.py  test_health_decay.py  test_pet_model.py  test_sleeping.py  test_sprite_alignment.py  test_stat_decay_realtime.py
