[project]
name = "tamagocli"
version = "0.1.0"
description = "Console Tamagochi game with multiple pets"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
    "readchar>=4.0.0",
    "wcwidth>=0.2.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
tamagocli = "tamagocli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

